--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "log4console",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "repository": "https://github.com/SyuTingSong/log4console.git",
   "author": "TingSong-Syu <rek@rek.me>",
   "license": "ISC",
@@ -17,5 +17,11 @@
     "@types/lodash": "^4.14.182",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
+  },
+  "exports": {
+    ".": {
+      "require": "./lib/cjs/index.js",
+      "import": "./lib/esm/index.js"
+    }
   }
 }
