--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "log4console",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "repository": "https://github.com/SyuTingSong/log4console.git",
   "author": "TingSong-Syu <rek@rek.me>",
   "license": "ISC",
@@ -18,6 +18,8 @@
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   },
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "exports": {
     ".": {
       "require": "./lib/cjs/index.js",
